# lfm

./: .gitignore  Makefile.am  Makefile.in  README  configure  configure.ac  copy_Makefile_solver.am  default.profraw  demo.sh  fastmesh_info
api/: .cfdv0_solver.h.swp  cfdv0_elements.h  cfdv0_solver.h  cfdv1_elements.h  cfdv1_solver.h  cfdv1_templates.h  constants.h  elements.h  fastmesh.h  gmsh_reader.h  hpath.h  mesh_partitioning.h  mesh_preprocessor.h  mesh_writer.h  mpi_env.h  templates_mpienv.h  timing.h
info/: lfm_preprocessor.cpp  lfm_solve.cpp
src/: cfd_v0.cpp  cfdv1_solver.cpp  gmsh_reader.cpp  hpath.cpp  mesh_partitioning.cpp  mesh_preprocessor.cpp  mesh_reader.cpp  mesh_solver.cpp  mesh_writer.cpp  mpi_env.cpp
